@@ -1,6 +1,8 @@
 2005-01-13  Philippe Gerum  <rpm@xenomai.org>
 
-	* skins/rtai/heap.c (rt_heap_alloc): Fix shared memory case.
+	* skins/rtai/heap.c (rt_heap_alloc): Fix shared memory case, and
+	prevent non-task callers asking for blocking requests from causing
+	the nucleus to panic.
 
 	* skins/rtai: Export the registry contents through the /proc
 	interface.
